--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_spinkit: ^5.2.1
+  url_launcher: ^6.3.1
   cached_network_image: ^3.4.1
   dio: ^5.7.0
   flutter_bloc: ^8.1.6
